--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col">
       <span></span>
-      <img src="2.jpg" alt="">
+      <img src="user.jpg" alt="">
     </div>
     <div class="col">
       <h3>Abiona Israel</h3>
